# orionbelt-chat

./: .dockerignore  .gitignore  DOCKERHUB.md  Dockerfile  README.md  RELEASING.md  app.py  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
public/: header.css  header.js
src/: chart_renderer.py  file_downloads.py  mcp_sampling.py  mcp_servers.py  prompts.py  providers.py
tests/: test_chart_renderer.py  test_mcp_sampling.py  test_mcp_servers.py  test_mermaid_renderer.py
