[project]
name = "orionbelt-chat"
version = "1.1.5"
description = "OrionBelt Chat - Chainlit + Pydantic AI chat client for OrionBelt Analytics"
authors = [{name = "Ralf Becher, RALFORION d.o.o.", email = "info@ralforion.com"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["chainlit", "pydantic-ai", "mcp", "chat", "analytics", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "chainlit>=2.0.0",
    "pydantic-ai>=2.10.0",
    "pydantic-ai-slim[openai,anthropic]>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # line too long (Chainlit messages can be long)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
